API support for partially supported languages
